src/app/ui/globals.scss
/* @tailwind base; */
/* @tailwind components; */
/* @tailwind utilities; */


 /* h1 {
 text-align: center;

 #131921
} */

body {
    padding: 0;
    margin: 0;
}

.navbar {
    background-color: #131921;
    width: 100%;
    position: relative;
    display: flex;
    align-items: center;
    color: #fff;
    font-size: 12px;
   // padding: 0px 20px;

    .nav-text-container {
        display: flex;
        // width: fit-content;
    &.accounts {
        padding-left: 12px;
    }
    }
    .nav-innertext-container {
       display: flex;
       flex-direction: column;
       white-space: nowrap;
       padding: 0px 16px 0px 0px;
       justify-content: center;

    }

    .line-1 {
        font-weight: 400;
        line-height: 110%;
    }
    .line-2 {
        font-weight: 700;
        font-size: 14px;
    }

    .pin {
        height:13px;
        padding: 5px;
        margin-top: 10px;
    }

    .nav-logo {
    height:30px;
    width: auto;
    padding: 9px;
    padding-top: 18px;
    }
    form {
       flex: 1;
    }
    .nav-search{
        display: flex;
        width: 100%;
       
    }
    .select-left {
       
         height: 35px;
         width: 60px;
         border: 0;
         background-color: #E6E6E6;
         border-radius: 3px 0px 0px 3px;
         padding-left: 5px;
         &:focus {
            outline: 0;
          }
          &:hover {
            background-color: #D4D4D4;
              }
    }

    .search-box{
        height: 35px;
        width: 100%;
        border: 0;
        padding: 0;
        overflow: hidden;
        padding-left: 5px;
        box-shadow: 0 1px 2px rgba(15,17,17,.15) inset;

        &:focus {
            outline: 0;
          }
        
    }
    .search-right {
        height: 35px;
        background-color: #febd69;
        display: flex;
        align-items: center;
        border-radius: 0px 3px 3px 0px;
     
     &:hover {
   background-color: #ff9900;
     }
    }
    .magnifying-glass {
        height: 13px;
        padding: 0 10px;
        transform: scaleX(-1);


    }

    .flags-container {
       display: flex;
       justify-content: flex-end;
       padding-left: 15px;
       margin-top: 5px;
    }

    .flag {
        height: 15px;
        padding-right: 2px;
    }
    .language-select {
        border: 0;
        color: #fff;
        font-weight: 700;
        background-color: transparent;
    }

    .cart-container {
       display: flex;
    }

    .cart-text-container {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
     }

    .cart {
        height: 30px;
    }

    .align-number-cart {
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;
    }
    .cart-number {
        color: #F08806;
        position: absolute;
        font-weight: 700;
        transform: translate(3px, 8px); 
        //  top: 11px;
        //   left: 18px;
    }
    .cartline-1 {
        visibility: hidden;
    }

}

